config/overlays/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  labels:
    app.kubernetes.io/component: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: data-diaries.openlab.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/(.*)
            backend:
              service:
                name: app
                port:
                  name: server
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  name: client

  tls:
    - hosts:
        - data-diaries.openlab.dev
      secretName: data-diaries.openlab.dev
